# sabre-engine

./: .gitignore  CMakeLists.txt
assets/shaders/: mesh.frag
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Transform.h  main.cpp
src/shaders/: mesh.frag  mesh.vert
src/utils/: FileReader.cpp  FileReader.h
